# geyser-neon-filter

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: geyser_filter.yml
src/: config.rs  consumer.rs  db.rs  filter.rs  main.rs
v1-simple/: Cargo.toml
v1-simple/src/: config.rs  consumer.rs  consumer_stats.rs  db.rs  db_inserts.rs  db_statements.rs  filter.rs  main.rs  prometheus.rs
v1/src/: filter.rs  main.rs
v2/: Cargo.toml
v2-advanced/: docker-compose-dev.yml  producer.properties
v2-advanced/avro/: notify_block.avro  update_account.avro  update_slot.avro
v2-advanced/clickhouse/: create_db_cluster.sql  create_notify_block.sql  create_notify_transaction.sql  create_update_account.sql  create_update_slot.sql  create_update_slot_distributed.sql  create_update_slot_mv.sql  create_update_slot_queue.sql
v2-advanced/clickhouse-cli/: Cargo.toml
v2-advanced/clickhouse-cli/src/: main.rs
v2-advanced/clickhouse/configs/clickhouse01/: enable_keeper.xml  shard_replica.xml
v2-advanced/clickhouse/configs/clickhouse02/: enable_keeper.xml  shard_replica.xml
v2-advanced/clickhouse/configs/clickhouse03/: enable_keeper.xml  shard_replica.xml
v2-advanced/clickhouse/configs/clickhouse04/: enable_keeper.xml  keeper_servers.xml  shard_replica.xml
v2-advanced/clickhouse/configs/common/: clickhouse_servers.xml  date_time_input_format.xml  log_to_console.xml
v2-advanced/json-schemas/: update_slot.json
