[package]
name = "geyser-neon-filter"
version = "0.1.0"
edition = "2021"
description = "Neon geyser filter"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
serde = "1.0.145"
serde_json = "1.0.85"
kafka_common = { git = "https://github.com/neonlabsorg/geyser-neon-plugin.git", branch = "main" }
log = "0.4.17"
fast_log = { version = "1.5.40" }
flume = "0.10.14"
tokio-postgres = "0.7.7"
anyhow = "1.0.65"
bs58 = "0.4.0"
