[package]
name = "geyser-neon-filter"
version = "1.0.0"
edition = "2021"
description = "Neon geyser filter"
authors = ["NeonLabs Maintainers <maintainers@neonlabs.org>"]

[dependencies]
ahash = { version = "0.8.2", features = ["serde"] }
clap = "4.0.27"
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.22.0", features = ["full"] }
rdkafka = { version = "0.29.0", features = ["cmake-build", "ssl", "sasl" , "zstd", "libz-static"] }
serde = "1.0.147"
serde_json = "1.0.89"
kafka_common = { git = "https://github.com/neonlabsorg/geyser-neon-plugin.git", branch = "v1.13.4" }
log = "0.4.17"
fast_log = { version = "1.5.46" }
flume = "0.10.14"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
anyhow = "1.0.66"
bs58 = "0.4.0"
crossbeam-queue = "0.3.8"
strum = "0.24"
strum_macros = "0.24"
build-info = { git = "https://github.com/danielschemmel/build-info", rev = "8d6e7e95d5ae046591e3c0d4ae16fdaba79b3cc7" }

[build-dependencies]
build-info-build = { git = "https://github.com/danielschemmel/build-info", rev = "8d6e7e95d5ae046591e3c0d4ae16fdaba79b3cc7" }
